# Vigenere-Cipher

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml
appimage/: AppRun  cipher.desktop
installer/: cipher.iss
src/: cipher.c
